--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,9 @@
     <string name="text_hint_trip_describe">輸入旅程描述</string>
     <string name="text_hint_trip_starttime">選擇出發日期</string>
     <string name="text_hint_trip_endtime">選擇結束日期</string>
+    <string name="bottom_navigation_home">home</string>
+    <string name="bottom_navigation_map">map</string>
+    <string name="bottom_navigation_profile">profile</string>
 
 
 </resources>
